--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -1,6 +1,7 @@
 full_name: "2nd International Workshop on Reconfigurable Transition Systems: Semantics, Logics and Applications"
 short_name: ReacTS 
 description: > # this means to ignore newlines until "baseurl:"
+  <h2> (Initial Draft) </h3>
   This is a satellite event of  <a href="https://sefm-conference.github.io/2025/" >SEFM 2025</a>
 
 email: jose.proenca@fc.up.pt / ...
