--- a/_data/cfp.yml
+++ b/_data/cfp.yml
@@ -11,9 +11,9 @@ description: >
 
   <p> Pre-proceedings will be available online before the Workshop. </p>
 
+  We plan to invite a selection of the contributions to submit an extended version to be published in a special issue. 
 
-  Extended versions of selected contributions will be published in a <b>special issue of the <a href=https://www.collegepublications.co.uk/ifcolog/> Journal of Applied Logics</a> </b>
-
+# Extended versions of selected contributions will be published in a <b>special issue of the <a href=https://www.collegepublications.co.uk/ifcolog/> Journal of Applied Logics</a> </b>
 
   
 areas:
