link to 2nd ReacTS

--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -154,21 +154,9 @@ deadlines:
 #   facebook_link:
 #   twitter_link:
 previous_iterations:
+  - name: 2nd ReacTS
+    year: 2025
+    url: https://reacts-workshop.github.io/2025/
   - name: 1st ReacTS
     year: 2024
     url: https://reacts2024.github.io/
-#   - name: 5th ISCLS
-#     year: 2013
-#     url: https://sites.google.com/site/5isclc2013/Home
-#   - name: 4th ISCLS
-#     year: 2010
-#     url: http://sanskrit.jnu.ac.in/conf/4iscls/index.jsp
-#   - name: 3rd ISCLS
-#     year: 2009
-#     url: https://sanskrit.inria.fr/Symposium/Symposium3.html
-#   - name: 2nd ISCLS
-#     year: 2008
-#     url: https://sanskritlibrary.org/symposium2/home.html
-#   - name: 1st ISCLS
-#     year: 2007
-#     url: https://sanskrit.inria.fr/Symposium/
