--- a/_data/submission.yml
+++ b/_data/submission.yml
@@ -3,11 +3,13 @@ description: >
 
   Accepted Full Papers will be included in the workshop programme and will appear in the workshop pre-proceedings as well as in the LNCS post-proceedings. Short presentations will be included in the pre-proceedings.
 
-  Pre-proceedings will be available online before the Workshop
+  Pre-proceedings will be available online before the Workshop.
+
+  The Microsoft CMT service was used for managing the peer-reviewing process for this conference. This service was provided for free by Microsoft and they bore all expenses, including costs for Azure cloud services as well as for software development and support.
 
 
-portal: Easy Chair
-url: "https://easychair.org/conferences/?conf=reacts2025"
+portal: CMT
+url: "https://cmt3.research.microsoft.com/reacts2025
 
 file_formats:
   - PDF
