--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -60,33 +60,36 @@
 - title: Technical Program Committe
   column: 2
   members:
-  - name: tbd
-    org: ""
-    homepage: ""
+  # - name: tbd
+  #   org: ""
+  #   homepage: ""
   # - name: Carlos Areces
   #   org: Universidad Nacional de Córdoba and CONICET (Argentina)
   #   homepage: https://carlosareces.github.io
   # - name: Luis Soares Barbosa
   #   org: "Universidade Do Minho (Portugal)"
   #   homepage: "https://www.di.uminho.pt/~lsb/"
-  # - name: Mario Benevides
-  #   org: Universidade Federal Fluminense (Brazil)
-  #   homepage: https://mariorfb.github.io
+  - name: Benjamin Bedregal
+    org: Universidade Federal do Rio Grande do Norte Brazil  
+    homepage: ""
+  - name: Mario Benevides
+    org: Universidade Federal Fluminense (Brazil)
+    homepage: https://mariorfb.github.io
   # - name: Johan van Benthem
   #   org: ILLC, University of Amsterdam (The Netherlands) & Stanford University (USA)
   #   homepage: https://staff.fnwi.uva.nl/j.vanbenthem
   # - name: Patrick Blackburn
   #   org: University of Roskilde (Denmark)
   #   homepage: https://www.patrickblackburn.org
-  # - name: Valentin Cassano
-  #   org: Universidad Nacional de Río Cuarto and CONICET (Argentina)
-  #   homepage: http://vcassano.github.io
-  # - name: Madalena Chaves
-  #   org: Centre Inria d'Université Côte d'Azur (France)
-  #   homepage: https://www-sop.inria.fr/members/Madalena.Chaves/
-  # - name: Gabriel Ciobanu
-  #   org: Institute of Computer Science, Romanian Academy (Romania)
-  #   homepage: https://www.researchgate.net/profile/Gabriel-Ciobanu
+  - name: Valentin Cassano
+    org: Universidad Nacional de Río Cuarto and CONICET (Argentina)
+    homepage: http://vcassano.github.io
+  - name: Madalena Chaves
+    org: Centre Inria d'Université Côte d'Azur (France)
+    homepage: https://www-sop.inria.fr/members/Madalena.Chaves/
+  - name: Gabriel Ciobanu
+    org: Institute of Computer Science, Romanian Academy (Romania)
+    homepage: https://www.researchgate.net/profile/Gabriel-Ciobanu
   # - name: Diana Costa
   #   org: Universidade de Lisboa (Portugal)
   #   homepage: https://scholar.google.com/citations?user=e1054DEAAAAJ&hl=en
@@ -96,52 +99,67 @@
   # - name: Hans van Ditmarsch
   #   org: CNRS, University of Toulouse (France)
   #   homepage: https://sites.google.com/site/hansvanditmarsch/
-  # - name: Daniel Figueiredo
-  #   org: "University of Aveiro (Portugal)"
-  #   homepage: " "
-  # - name: Sabine Frittella
-  #   org: "Université d'Orleans (France)"
-  #   homepage: "https://scholar.google.fr/citations?user=LXJScpMAAAAJ&hl=fr"
+  - name: Daniel Figueiredo
+    org: "University of Aveiro (Portugal)"
+    homepage: " "
+  - name: Sabine Frittella
+    org: "Université d'Orleans (France)"
+    homepage: "https://scholar.google.fr/citations?user=LXJScpMAAAAJ&hl=fr"
   # - name: Dov Gabbay
   #   org: "King's College London (UK)"
   #   homepage: "https://kclpure.kcl.ac.uk/portal/en/persons/dov-gabbay"
   # - name: Sujata Gosh
   #   org: "Indian Statistical Institute, Chennai (India)"
   #   homepage: "https://www.isichennai.res.in/~sujata/"
-  # - name: Andreas Herzig
-  #   org: CNRS, Université Paul Sabatier (France)
-  #   homepage: https://www.irit.fr/~Andreas.Herzig/
+  - name: Andreas Herzig
+    org: CNRS, Université Paul Sabatier (France)
+    homepage: https://www.irit.fr/~Andreas.Herzig/
   # - name: Juha Kontinen
   #   org: University of Helsinki (Finland)
   #   homepage: https://researchportal.helsinki.fi/en/persons/juha-kontinen
-  # - name: Alexandre Madeira
-  #   org: "University of Aveiro (Portugal)"
-  #   homepage: "https://sweet.ua.pt/madeira/"
-  # - name: Sergio Marcelino
-  #   org: "IT & Dep. Mathematics IST, University of Lisbon (Portugal)"
-  #   homepage: "https://www.researchgate.net/profile/Sergio-Marcelino"
-  # - name: Regivan Santiago
-  #   org: "Universidade Federal do Rio Grande do Norte (Brazil)"
-  #   homepage: "https://www.researchgate.net/profile/Regivan-Santiago"
-  # - name: François Schwarzentruber
-  #   org: "ENS Rennes (France)"
-  #   homepage: "https://people.irisa.fr/Francois.Schwarzentruber"
+  - name: Alexandre Madeira
+    org: "University of Aveiro (Portugal)"
+    homepage: "https://sweet.ua.pt/madeira/"
+  - name: Sergio Marcelino
+    org: "IT & Dep. Mathematics IST, University of Lisbon (Portugal)"
+    homepage: "https://www.researchgate.net/profile/Sergio-Marcelino"
+  - name: Vanina Martínez
+    org: IIIA-CSIC, Barcelona, Spain
+    homepage: "https://www.iiia.csic.es/~vmartinez/"
+  - name: Carles Noguera Clofent
+    org: Università degli Studi di Siena Italy
+    homepage: "https://docenti.unisi.it/en/noguera-clofent"
+  - name: aybüke özgün
+    org: University of Amsterdam, The Netherlands
+    homepage: "https://sites.google.com/site/ozgunaybuke/"
+  - name: Alessandra Palmigiano
+    org: Vrije Universiteit Amsterdam, The Netherlands
+    homepage: "https://research.vu.nl/en/persons/alessandra-palmigiano"
+  - name: Regivan Santiago
+    org: "Universidade Federal do Rio Grande do Norte (Brazil)"
+    homepage: "https://www.researchgate.net/profile/Regivan-Santiago"
+  - name: François Schwarzentruber
+    org: "ENS Rennes (France)"
+    homepage: "https://people.irisa.fr/Francois.Schwarzentruber"
   # - name: Igor Sedlár
   #   org: Czech Academy of Sciences (Czech Republic)
   #   homepage: https://www.cs.cas.cz/sedlar/
-  # - name: Sonja Smets
-  #   org: ILLC, University of Amsterdam (The Netherlands)
-  #   homepage: https://sites.google.com/site/thesonjasmetssite/
-  # - name: Ionuț Țuțu
-  #   org: Simion Stoilow Institute of Mathematics of the Romanian Academy (Romania)
-  #   homepage: https://scholar.google.co.uk/citations?user=10v2GlMAAAAJ&hl=en
-  # - name: Fernando R. Velázquez-Quesada
-  #   org: "University of Bergen (Norway)"
-  #   homepage: "https://www.uib.no/en/persons/Fernando.Raymundo.Velazquez.Quesada"
-  # - name: Fan Yang
-  #   org: "Utrecht University (The Netherlands)"
-  #   homepage: "https://sites.google.com/site/fanyanghp/"
+  - name: Sonja Smets
+    org: ILLC, University of Amsterdam (The Netherlands)
+    homepage: https://sites.google.com/site/thesonjasmetssite/
+  - name: Ionuț Țuțu
+    org: Simion Stoilow Institute of Mathematics of the Romanian Academy (Romania)
+    homepage: https://scholar.google.co.uk/citations?user=10v2GlMAAAAJ&hl=en
+  - name: Fernando R. Velázquez-Quesada
+    org: "University of Bergen (Norway)"
+    homepage: "https://www.uib.no/en/persons/Fernando.Raymundo.Velazquez.Quesada"
+  - name: Fan Yang
+    org: "Utrecht University (The Netherlands)"
+    homepage: "https://sites.google.com/site/fanyanghp/"
   
+
+
+
 # - title: Webmaster
 #   column: 1
 #   members:
