tweaks to affiliations

--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -70,7 +70,7 @@
   #   org: "Universidade Do Minho (Portugal)"
   #   homepage: "https://www.di.uminho.pt/~lsb/"
   - name: Benjamin Bedregal
-    org: Universidade Federal do Rio Grande do Norte Brazil  
+    org: Universidade Federal do Rio Grande do Norte (Brazil)
     homepage: ""
   - name: Mario Benevides
     org: Universidade Federal Fluminense (Brazil)
@@ -124,16 +124,16 @@
     org: "IT & Dep. Mathematics IST, University of Lisbon (Portugal)"
     homepage: "https://www.researchgate.net/profile/Sergio-Marcelino"
   - name: Vanina Martínez
-    org: IIIA-CSIC, Barcelona, Spain
+    org: IIIA-CSIC, Barcelona (Spain)
     homepage: "https://www.iiia.csic.es/~vmartinez/"
   - name: Carles Noguera Clofent
-    org: Università degli Studi di Siena Italy
+    org: Università degli Studi di Siena (Italy)
     homepage: "https://docenti.unisi.it/en/noguera-clofent"
   - name: aybüke özgün
-    org: University of Amsterdam, The Netherlands
+    org: University of Amsterdam (The Netherlands)
     homepage: "https://sites.google.com/site/ozgunaybuke/"
   - name: Alessandra Palmigiano
-    org: Vrije Universiteit Amsterdam, The Netherlands
+    org: Vrije Universiteit Amsterdam (The Netherlands)
     homepage: "https://research.vu.nl/en/persons/alessandra-palmigiano"
   - name: Regivan Santiago
     org: "Universidade Federal do Rio Grande do Norte (Brazil)"
