--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -108,9 +108,9 @@
   # - name: Dov Gabbay
   #   org: "King's College London (UK)"
   #   homepage: "https://kclpure.kcl.ac.uk/portal/en/persons/dov-gabbay"
-  # - name: Sujata Gosh
-  #   org: "Indian Statistical Institute, Chennai (India)"
-  #   homepage: "https://www.isichennai.res.in/~sujata/"
+  - name: Sujata Gosh
+    org: "Indian Statistical Institute, Chennai (India)"
+    homepage: "https://www.isichennai.res.in/~sujata/"
   - name: Andreas Herzig
     org: CNRS, Université Paul Sabatier (France)
     homepage: https://www.irit.fr/~Andreas.Herzig/
