--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -129,7 +129,7 @@
   - name: Carles Noguera Clofent
     org: Università degli Studi di Siena (Italy)
     homepage: "https://docenti.unisi.it/en/noguera-clofent"
-  - name: aybüke özgün
+  - name: Aybüke Özgün
     org: University of Amsterdam (The Netherlands)
     homepage: "https://sites.google.com/site/ozgunaybuke/"
   - name: Alessandra Palmigiano
