--- a/_data/cfp.yml
+++ b/_data/cfp.yml
@@ -33,7 +33,7 @@ areas:
     - Model Checking and Tools
     - Reactive systems and Process Algebra
     - Logics for Cyber Physical Systems
-    - Topological an Algebraic Semantics
+    - Topological and Algebraic Semantics
     - Applications of AI for RTS
 
 
