--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -116,18 +116,22 @@ deadline_timezone: AoE
 deadlines:
   # - date: 2024-08-20 - before extension in 2024
   # - date: 2024-08-27 - after extension in 2024
+  - date: 2025-08-13
+    text: Abstract submission
+    pass_due: False
+    strike_through: False
   - date: 2025-08-20
-    text: Tentative submission deadline
+    text: Paper submission
     pass_due: False
     strike_through: False
   # - date: 2024-09-20 - before extension in 2024
   # - date: 2024-09-25 - after extension in 2024
-  - date: 2025-09-20
-    text: Tentative notification of acceptance
+  - date: 2025-09-22
+    text: Notification of acceptance
     pass_due: False
     strike_through: False
   - date: 2025-10-20 
-    text: Camera-ready due
+    text: Camera-ready
     pass_due: False
     strike_through: False
   # - date: November 4, 2024
