--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -9,6 +9,14 @@
     org: Universidad Nacional de Educación a Distancia (Spain)
     post: ""
     homepage: https://sites.google.com/view/umberto-rivieccio
+# - name: Raul Fervari
+#   org: Universidad Nacional de Córdoba and CONICET (Argentina)
+#   post: ""
+#   homepage: https://cs.famaf.unc.edu.ar/~rfervari
+# - name: Manuel Martins
+#   org: University of Aveiro (Portugal)
+#   post: ""
+#   homepage: https://cs.famaf.unc.edu.ar/~rfervari
 # - title: Organising Chair
 #   column: 1
 #   members:
@@ -99,6 +107,10 @@
   # - name: Hans van Ditmarsch
   #   org: CNRS, University of Toulouse (France)
   #   homepage: https://sites.google.com/site/hansvanditmarsch/
+  - name: Raul Fervari
+    org: Universidad Nacional de Córdoba and CONICET (Argentina)
+    post: ""
+    homepage: https://cs.famaf.unc.edu.ar/~rfervari
   - name: Daniel Figueiredo
     org: "University of Aveiro (Portugal)"
     homepage: " "
@@ -126,6 +138,10 @@
   - name: Vanina Martínez
     org: IIIA-CSIC, Barcelona (Spain)
     homepage: "https://www.iiia.csic.es/~vmartinez/"
+  - name: Manuel Martins
+    org: University of Aveiro (Portugal)
+    post: ""
+    homepage: https://sweet.ua.pt/martins/
   - name: Carles Noguera Clofent
     org: Università degli Studi di Siena (Italy)
     homepage: "https://docenti.unisi.it/en/noguera-clofent"
