Update conference.yml -- just 11 Nov

--- a/_data/conference.yml
+++ b/_data/conference.yml
@@ -10,7 +10,7 @@ full_title: "2nd International Workshop on Reconfigurable Transition Systems: Se
 short_title: ReacTS Workshop
 
 year: 2025
-date: November 10-11, 2025
+date: November 11, 2025
 
 location: Toledo
 country: Spain
