added invited speaker

--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -28,9 +28,12 @@
 #     org: ""
 #     post: ""
 #     homepage:  ""
-# - title: Invited Speakers
-#   column: 1
-#   members: 
+- title: Invited Speakers
+  column: 1
+  members: 
+  - name: Alessandra Palmigiano
+    org: "Alessandra Palmigiano, Vrije Universiteit Amsterdam (The Netherlands)"
+    homepage: "https://research.vu.nl/en/persons/alessandra-palmigiano"
 #   - name: Johan van Benthem
 #     org: ILLC, University of Amsterdam (The Netherlands) & Stanford University (USA)
 #     homepage: https://staff.fnwi.uva.nl/j.vanbenthem
