typos in PC names

--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -77,7 +77,7 @@
   # - name: Carlos Areces
   #   org: Universidad Nacional de Córdoba and CONICET (Argentina)
   #   homepage: https://carlosareces.github.io
-  - name: Luis Soares Barbosa
+  - name: Luís Soares Barbosa
     org: "Universidade Do Minho (Portugal)"
     homepage: "https://www.di.uminho.pt/~lsb/"
   - name: Benjamin Bedregal
@@ -135,7 +135,7 @@
   - name: Alexandre Madeira
     org: "University of Aveiro (Portugal)"
     homepage: "https://sweet.ua.pt/madeira/"
-  - name: Sergio Marcelino
+  - name: Sérgio Marcelino
     org: "IT & Dep. Mathematics IST, University of Lisbon (Portugal)"
     homepage: "https://www.researchgate.net/profile/Sergio-Marcelino"
   - name: Vanina Martínez
@@ -145,7 +145,7 @@
     org: University of Aveiro (Portugal)
     post: ""
     homepage: https://sweet.ua.pt/martins/
-  - name: Carles Noguera Clofent
+  - name: Carles Noguera i Clofent
     org: Università degli Studi di Siena (Italy)
     homepage: "https://docenti.unisi.it/en/noguera-clofent"
   - name: Aybüke Özgün
