--- a/_data/news.yml
+++ b/_data/news.yml
@@ -20,5 +20,10 @@
 #   text: We announce an special issue at the <b><a href=https://www.collegepublications.co.uk/ifcolog/> Journal of Applied Logics</a></b>
 # - date: 2024-03-12
 #   text: Call for papers is out
+
+- date: 2025-08-04
+  text: 2nd call for papers is out
+- date: 2025-07-01
+  text: Alessandra Palmigiano agreed to be an invited speaker!
 - date: 2025-03-31
   text: Website is online
