--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -34,8 +34,9 @@
   - name: Alessandra Palmigiano
     org: "Alessandra Palmigiano, Vrije Universiteit Amsterdam (The Netherlands)"
     homepage: "https://research.vu.nl/en/persons/alessandra-palmigiano"
-  - name: Speaker 2
-    org: "(TBA)"
+  - name: Amanda Vidal
+    org: "Amanda Vidal, Czech Academy of Sciences (Czech Republic)"
+    homepage: "https://www.cs.cas.cz/vidal/"
 #   - name: Johan van Benthem
 #     org: ILLC, University of Amsterdam (The Netherlands) & Stanford University (USA)
 #     homepage: https://staff.fnwi.uva.nl/j.vanbenthem
