--- a/_data/registration.yml
+++ b/_data/registration.yml
@@ -2,4 +2,4 @@ about: "Registration is open!"
 url: "https://sefm-conference.github.io/2025/registration/" 
 description: 
 
-  Check the <a class="font-weight-bold" href="./venue.html">Venue</a> tab for details about accommodation.
+  Check the <a class="font-weight-bold" href="https://sefm-conference.github.io/2025/venue/">main SEFM website</a> for details about directions and accommodation.
