--- a/_data/organization.yml
+++ b/_data/organization.yml
@@ -33,10 +33,10 @@
   members: 
   - name: Alessandra Palmigiano
     org: "Alessandra Palmigiano, Vrije Universiteit Amsterdam (The Netherlands)"
-    homepage: "https://research.vu.nl/en/persons/alessandra-palmigiano"
+    homepage: "/2025/invited-talks#alessandrapalmigiano"
   - name: Amanda Vidal
     org: "Amanda Vidal, Czech Academy of Sciences (Czech Republic)"
-    homepage: "https://www.cs.cas.cz/vidal/"
+    homepage: "/2025/invited-talks#amandavidal"
 #   - name: Johan van Benthem
 #     org: ILLC, University of Amsterdam (The Netherlands) & Stanford University (USA)
 #     homepage: https://staff.fnwi.uva.nl/j.vanbenthem
